argo/monitoring/ingresses/grafana-http-ingress.yaml
# Additional Ingress for HTTP
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana-http
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.sion.deepsquare.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
